Update game: Reduce projectile size, add Hiro marker disclaimer, increase target distance

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <div id="score-display">Score: <span id="current-score">0</span></div>
         <div id="tries-display">Tries: <span id="current-tries">0</span></div>
     </div>
+    <div id="marker-disclaimer" class="disclaimer">
+        ⚠️ Requires Hiro marker to play
+    </div>
     <a-scene embedded arjs="trackingMethod: best; debugUIEnabled: false;">
         <!-- Camera with AR capabilities -->
         <a-entity camera></a-entity>
